# ChangeLog for sci-libs/proj
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sci-libs/cvs-repo/gentoo-x86/sci-libs/proj/ChangeLog,v 1.29 2011/07/20 16:49:21 pacho Exp $

  20 Jul 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #104313

  21 Jun 2011; Justin Lecher <jlec@gentoo.org> proj-4.4.9.ebuild,
  proj-4.5.0.ebuild, proj-4.6.0.ebuild, proj-4.6.1.ebuild, proj-4.7.0.ebuild:
  Add dependency on virtual/fortran

  21 Jun 2011; Justin Lecher <jlec@gentoo.org> proj-4.4.9.ebuild,
  proj-4.5.0.ebuild, proj-4.6.0.ebuild, proj-4.6.1.ebuild, proj-4.7.0.ebuild:
  Added fortran-2.eclass support

  04 Oct 2010; Samuli Suominen <ssuominen@gentoo.org> proj-4.7.0.ebuild:
  ppc64 stable wrt #317381

  18 Jul 2010; <nixnut@gentoo.org> proj-4.7.0.ebuild:
  ppc stable #317381

  30 May 2010; Raúl Porcel <armin76@gentoo.org> proj-4.7.0.ebuild:
  alpha/s390/sparc stable wrt #317381

  16 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> proj-4.7.0.ebuild:
  x86 stable wrt bug #317381

  15 May 2010; Markos Chandras <hwoarang@gentoo.org> proj-4.7.0.ebuild:
  Stable on amd64 wrt bug #317381. Thanks to Roeland Douma
  <roeland@rullzer.com>

  13 May 2010; Jeroen Roovers <jer@gentoo.org> proj-4.7.0.ebuild:
  Stable for HPPA (bug #317381).

  27 Apr 2010; Tomáš Chvátal <scarabeus@gentoo.org> proj-4.7.0.ebuild:
  Add missing die to dodoc.

  26 Apr 2010; Tomáš Chvátal <scarabeus@gentoo.org> proj-4.7.0.ebuild:
  Make static library configureable.

  02 Jan 2010; Christian Faulhammer <fauli@gentoo.org> proj-4.7.0.ebuild:
  Transfer Prefix keywords

  25 Nov 2009; <djay@gentoo.org> proj-4.6.1.ebuild, proj-4.7.0.ebuild:
  Update 4.7.0 and 4.6.1 to use datumgrid 1.5

*proj-4.7.0 (03 Oct 2009)

  03 Oct 2009; Patrick Lauer <patrick@gentoo.org> +proj-4.7.0.ebuild:
  Bump to 4.7.0, fixes #287570

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> proj-4.4.9.ebuild:
  Remove virtual/libc
