@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA512
 
 AUX proj-4.4.7-gentoo.patch 914 RMD160 99365adb7e7e2080c08dd1cf156e4ea8b02069b3 SHA1 43f1cf0e521e784760926a551ca40bfc56b77143 SHA256 d85efb76a1b02aef962ccfa422b353c15fd177265202d49b8eeaea46000efa65
 AUX proj-4.6.1-test.patch 1961 RMD160 3fe7439610c3bd63094b1e89ebb0c78f994f3db7 SHA1 11377ddf8d05d1b0a918f16b4f64377dbb50c437 SHA256 e6dc6f022d8dd21d9a9e77cae85f5790c34924fd553104e196bc7e909a845371
@@ -11,17 +11,17 @@ DIST proj-4.7.0.tar.gz 684923 RMD160 cd96c09906b99d2ad205cc087e2863910d1124e1 SH
 DIST proj-datumgrid-1.3.zip 2114801 RMD160 6eb5381ad661d81abeb9b67c61f5260a2a9c8d26 SHA1 9ae79ad7a769a3943cbbb52ed3e496250b05e82f SHA256 222fb6f599a8ebc99df365ee35cb606c0bba0d8a9b0448f115b07509884a8ee4
 DIST proj-datumgrid-1.5.zip 2250131 RMD160 f5deacd0242557c92c35d43941cd52a7e4096467 SHA1 4429ba1a8c764d5c0e6724d868f6874f452f7440 SHA256 723c4017d95d7a8abdf3bda4e18d3c15d79b00f9326d453da5fdf13f96c287db
 DIST proj-nad27-1.2.tar.gz 1830374 RMD160 79624b4e51ea0e7a85266516a0dca63b62a4ba96 SHA1 a474606caf950e359421dff4dadee56b2e504a03 SHA256 52f2401389d3e71c8a1322a7642a2020839adeb2491f5040b46ac97b48ac7047
-EBUILD proj-4.4.9.ebuild 1037 RMD160 229b15d6d7a212f3bba272f37993077499fa7ac6 SHA1 1de30efb958b22e793faf0d799407cfcf03bbe19 SHA256 c741e4b0276baa91430eff08d16338ac575ad0a301bd2c35c5d7832c1eb1a09a
-EBUILD proj-4.5.0.ebuild 1006 RMD160 1dd131bf320c3f2e423b24d37209b86c87f8b3c7 SHA1 2c7cdf2d67fe8c9c0ffc087de882c66ec1369084 SHA256 ab816dd97028e1c35c149c53ccb8cf869e7a22e965b6733626e4c27d95894e5d
-EBUILD proj-4.6.0.ebuild 1017 RMD160 366f609c22d066dfa9e166037a6792ccd61dea6d SHA1 39a4bcd9d482e8132fcb845b14eb21208d332cff SHA256 cd43db5701e03e722b72b99527e2fe4549667367f19ab43ce84d7752ebc5d6d4
-EBUILD proj-4.6.1.ebuild 1066 RMD160 365bda4b3fd83b756c920b2c4062efcf94be8c37 SHA1 3fd46220c97732723d3e5d14f42cbe74bb0a8359 SHA256 7e591ce6ff724eecfe0e44eeda122234c5b749c9b49184e5bdd3ac78c3fdaaa7
-EBUILD proj-4.7.0.ebuild 1122 RMD160 b231c073d645f535018b21d4c1d369016c0bf910 SHA1 291068147f1f4ed4dba702ae46a53ea641fcbfee SHA256 414257b1765635932c6b262519d655bde7fa5acd4ab26e1c390a5ee28396474e
-MISC ChangeLog 5658 RMD160 1f28d1f77c9bedf5c113661b775b02dbb685bef3 SHA1 eb8549e930d1690c39e617fdbd1e661b9989b04b SHA256 f4da8c8e6f74f3f17a24ad2688cf9fc9a8c9077e4f2683d94ec06da8f4e20aa8
-MISC metadata.xml 306 RMD160 3e8ad806a16975c989ef80f213fcdddbb69ea89f SHA1 5b8fccfb2593902de69bc1a8dc097f9917134759 SHA256 e65de2ba417120dd773701bb73956ce5046b2935dd77a0030252283ee3c97036
+EBUILD proj-4.4.9.ebuild 986 RMD160 310811a6b692a0f66290594bd632df23f718ccc5 SHA1 4cd19234e11b0963c97624c01f6b0bccee719655 SHA256 a888ff2d779b9a329b3aac66d384e496f5d22fc6aad009cc927b77180ca7cc12
+EBUILD proj-4.5.0.ebuild 977 RMD160 e71cd148907e6afb029f8d119eb0178cf9ce9a0d SHA1 03ecb48089a10c6acb9c5579440f0021978d11c0 SHA256 0e4b544ebc036f7fede69ab84847070f29686d356bee98179f37342ec2de62c6
+EBUILD proj-4.6.0.ebuild 988 RMD160 a1ce673e28fab1bdd001a2ac886f0c62af49319c SHA1 dfb823c18442939bbab8841ef68f8cac37f11818 SHA256 95e6172ed35bb240ef6169a01b1d8d4b1af12f798b41c09c899bdb2fbb75c2fb
+EBUILD proj-4.6.1.ebuild 1037 RMD160 59011f9556c21da57c3edd9bdfa9c49c49338654 SHA1 e5602e1833b0a3259c6ebfbe2c84a2d6da7b4066 SHA256 a4a64b4f719b0ea6bd987ef765b451bab00b5517edd94e25673c2973ea8e384a
+EBUILD proj-4.7.0.ebuild 1093 RMD160 78fcb55c18f0d08603eb552038710c9cde615a77 SHA1 a99a5ff0935fadabb4e153bedfe96431d6a15746 SHA256 bae781a5d0238dfd68789563d317b732d699193a4c4fc36a4affcce50caaaa26
+MISC ChangeLog 5879 RMD160 e8934170658f8b6e35e7139cd0d66cd28ea2b301 SHA1 b30f6bec077b12276ffbe33da76f564caf56fdb0 SHA256 f68e3732f3d8d1ddb8050a7bdb75d2935b02cb24c5113925295d4aa9dfcde962
+MISC metadata.xml 308 RMD160 b819e91cf74eed09b4c4da5587ef7978e948a869 SHA1 2451512e790a4c9e6d52a415ef487c23fbf6dd91 SHA256 52dc566db66dd40f03da6e8d205031c47f169774b04410b1a453b62651f53bc3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk4nBxYACgkQCaWpQKGI+9RXGgCghZOCmqhZeW8T5HBVIhs0f2yx
-gBcAn3n2ZuiQdmc7J9apXNL9I0M4k345
-=Ky6I
+iEYEAREKAAYFAk4nzwgACgkQgAnW8HDreRYmWwCfTiS10oPBkqwuofh0OSx2verb
+j8AAoML/GGwMUMD2aJKBYlepRtC6eHR0
+=mjiq
 -----END PGP SIGNATURE-----
