@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>sci-geosciences</herd>
-<longdescription>Proj.4 cartograpic projection code for forward and inverse 
+	<herd>sci-geosciences</herd>
+	<longdescription>Proj.4 cartograpic projection code for forward and inverse 
 coordinate and projection transformations.</longdescription>
 </pkgmetadata>
