@@ -1,8 +1,8 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-libs/cvs-repo/gentoo-x86/sci-libs/proj/Attic/proj-4.4.9.ebuild,v 1.11 2011/06/21 15:06:42 jlec Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-libs/cvs-repo/gentoo-x86/sci-libs/proj/Attic/proj-4.4.9.ebuild,v 1.12 2011/07/21 07:02:26 jlec Exp $
 
-inherit eutils fortran-2
+inherit eutils
 N=${S}/nad
 
 DESCRIPTION="Proj.4 cartographic projection software with updated NAD27 grids"
@@ -14,11 +14,6 @@ LICENSE="MIT"
 SLOT="0"
 KEYWORDS="alpha amd64 hppa ~mips ppc ppc64 s390 sparc x86"
 IUSE=""
-
-DEPEND="
-	virtual/fortran
-	"
-RDEPEND=""
 
 src_unpack() {
 	unpack ${P}.tar.gz
