@@ -1,8 +1,8 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-libs/cvs-repo/gentoo-x86/sci-libs/proj/Attic/proj-4.6.0.ebuild,v 1.3 2011/06/21 15:06:42 jlec Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-libs/cvs-repo/gentoo-x86/sci-libs/proj/Attic/proj-4.6.0.ebuild,v 1.4 2011/07/21 07:02:26 jlec Exp $
 
-inherit eutils fortran-2
+inherit eutils
 
 DESCRIPTION="Proj.4 cartographic projection software with updated NAD27 grids"
 HOMEPAGE="http://proj.maptools.org/"
@@ -14,9 +14,7 @@ SLOT="0"
 KEYWORDS="~alpha ~amd64 ~hppa ~mips ~ppc ~ppc64 ~s390 ~sparc ~x86"
 IUSE=""
 
-RDEPEND="
-	virtual/fortran
-	"
+RDEPEND=""
 DEPEND="app-arch/unzip"
 
 src_unpack() {
