@@ -1,10 +1,10 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-libs/cvs-repo/gentoo-x86/sci-libs/proj/proj-4.7.0.ebuild,v 1.13 2011/06/21 15:06:42 jlec Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-libs/cvs-repo/gentoo-x86/sci-libs/proj/proj-4.7.0.ebuild,v 1.14 2011/07/21 07:02:26 jlec Exp $
 
 EAPI="3"
 
-inherit base fortran-2
+inherit base
 
 DESCRIPTION="Proj.4 cartographic projection software with updated NAD27 grids"
 HOMEPAGE="http://trac.osgeo.org/proj/"
@@ -16,9 +16,7 @@ SLOT="0"
 KEYWORDS="alpha amd64 hppa ~mips ppc ppc64 s390 sparc x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
 IUSE="static-libs"
 
-RDEPEND="
-	virtual/fortran
-	"
+RDEPEND=""
 DEPEND="app-arch/unzip"
 
 src_unpack() {
